--- a/instagram.html
+++ b/instagram.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="pacote-d013/imagens/tela-instagram.jpg" alt="instagram">
- <a href="https://www.instagram.com/gustavoguanabara/">ACESSE</a>   
+    <img src="instagram.jpg" alt="instagram">
+ <a href="https://www.instagram.com/zangorow/" target="_blank">ACESSE</a>   
 </body>
 </html>
